Fix Android-compatible streaming VAD sidecar read